fix button on safari

--- a/styles/ActionButton.module.css
+++ b/styles/ActionButton.module.css
@@ -1,7 +1,4 @@
 .primaryButton {
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
   text-decoration: none;
   color: initial;
 
@@ -23,9 +20,6 @@
 }
 
 .secondaryButton {
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
   text-decoration: none;
   color: initial;
 
